--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "chart.js": "^4.4.7",
     "firebase": "^11.1.0",
     "framer-motion": "^11.18.2",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
