--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8.4.49",
     "rollup": "^4.30.0",
     "tailwindcss": "^3.4.15",
+    "terser": "^5.44.0",
     "vite": "^5.4.11"
   }
 }
