--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.3.1",
+    "@studio-freight/lenis": "^1.0.42",
     "antd": "^5.22.7",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
     "firebase": "^11.1.0",
     "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
-    "lenis": "^1.3.11",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
